--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ scopeguard = "1.2.0"
 semver = "1.0.27"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+tempfile = "3.24.0"
 texture_packer = "0.30.0"
 thiserror = "2.0.17"
 toml = "0.9.10"
