--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
+anyhow = "1.0.100"
 chrono = "0.4.42"
 clap = { version = "4.5.53", features = ["derive"] }
 colored = "3.0.0"
@@ -17,6 +18,7 @@ dirs = "6.0.0"
 git2 = { version = "0.20.3", features = ["vendored-openssl"] }
 image = "0.25.9"
 indicatif = "0.18.3"
+regex = "1.12.2"
 reqwest = { version = "0.12.26", features = ["blocking"] }
 rouille = "3.6.2"
 scopeguard = "1.2.0"
