--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,8 @@ url = "2.5.7"
 wait-timeout = "0.2.1"
 walkdir = "2.5.0"
 zip = "7.0.0"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
