--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tempfile = "3.24.0"
 texture_packer = "0.30.0"
 thiserror = "2.0.17"
 toml_edit = { version = "0.24.0", features = ["serde"] }
-ureq = "3.1.4"
+ureq = { version = "3.1.4", features = ["platform-verifier"] }
 url = "2.5.7"
 wait-timeout = "0.2.1"
 walkdir = "2.5.0"
