--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.5.53", features = ["derive"] }
 colored = "3.0.0"
 ctrlc = "3.5.1"
 dirs = "6.0.0"
+enable-ansi-support = "0.3.1"
 image = { version = "0.25.9", default-features = false, features = ["png"] }
 indicatif = "0.18.3"
 regex = "1.12.2"
