test sokol compilation
trying to move sokol compilation from shell scripts to the cli using
parallel threaded approach for peformance, currently tested and working
for web and desktop on macos and it works, pushing to test on
windows/linux machines

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ dirs = "6.0.0"
 enable-ansi-support = "0.3.1"
 image = { version = "0.25.9", default-features = false, features = ["png"] }
 indicatif = "0.18.3"
+rayon = "1.11.0"
 regex = "1.12.2"
 rouille = "3.6.2"
 scopeguard = "1.2.0"
